fixed about-me margin spacing
based on new module format

--- a/templates/modules/graphic-diptych/style.css
+++ b/templates/modules/graphic-diptych/style.css
@@ -1,26 +1,32 @@
 .graphic-diptych-module {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+}
+
+graphic-diptych {
+	display: flex;
+	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
 	padding: 20px;
 	gap: 20px;
 	background-color: var(--primaryColor2);
 	color: var(--offwhite);
-	margin: 3em 0 30px 0;
+	margin: 100px 0 30px 0;
 	max-width: var(--tightWidth);
 }
 
-.graphic-diptych-module p {
+graphic-diptych p {
 	font-size: 18px;
 	line-height: 1.5;
 }
 
-.graphic-diptych-module a {
+graphic-diptych a {
 	color: var(--blue);
 }
 
-.graphic-diptych-module picture {
+graphic-diptych picture {
  	width: 90%;
  	max-width: 400px;
  	margin: -50px 0 0 0;
@@ -28,16 +34,22 @@
 }
 
 @media (min-width: 650px) {
-	.graphic-diptych-module {
-		flex-direction: row-reverse;
-		margin: 2em 4em 30px 0;
+	.graphic-diptych-module inner-column {
+		padding: 0 100px;
+		outline: 2px solid red;
 	}
 
-	.graphic-diptych-module .content {
+	graphic-diptych {
+		flex-direction: row-reverse;
+		justify-content: center;
+		margin: 50px 0 30px 0;
+	}
+
+	graphic-diptych .content {
 		flex-basis: 55%;
 	}
 
-	.graphic-diptych-module picture {
+	graphic-diptych picture {
 	 	flex: 1;
 	 	
 	 	margin: -6em -4em 0 0;
