--- a/templates/modules/page-header/style.css
+++ b/templates/modules/page-header/style.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-top: 4em;
+	margin: 4em 0 2em 0;
 }
 
 .page-header h1 {
